Fixed horizontal overflow

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -16,6 +16,7 @@ b {
 
 body {
     padding-top: @navbar-height;
+    overflow-x: hidden;
 }
 
 .center-vertical {
